# stack-lang-server

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
lsp/: Cargo.toml
lsp/src/: def.rs  definition.rs  document.rs  fmt.rs  format.rs  lexer.rs  lexer_v2.rs  lib.rs  main.rs  tokens.rs  workspace.rs
lsp/src/parser/: mod.rs
m_lang/: Cargo.toml
m_lang/codegen/: m.ungram
m_lang/src/: lib.rs
m_lang/src/factory/: generated.rs  make.rs  mod.rs
m_lang/src/formatter/: comments.rs  context.rs  cst.rs  format.rs  macros.rs  mod.rs  parentheses.rs  prelude.rs  separated.rs  syntax_rewriter.rs
m_lang/src/formatter/context/: trailing_commas.rs
m_lang/src/formatter/rules/: mod.rs  tokens.rs
m_lang/src/formatter/utils/: array.rs  assignment_like.rs  conditional.rs  format_binary_like_expression.rs  format_class.rs  format_node_without_comments.rs  function_body.rs  mod.rs  object.rs  object_like.rs  quickcheck_utils.rs  string_utils.rs
m_lang/src/lexer/: errors.rs  mod.rs
m_lang/src/parser/: logos_lexer.rs  mod.rs  rewrite.rs  rewrite_parser.rs  single_token_parse_recovery.rs  state.rs  syntax_rules.rs  token_source.rs
m_lang/src/parser/syntax_rules/: annotation.rs  assignment.rs  auxiliary.rs  binding.rs  class.rs  expr.rs  function.rs  m_parse_error.rs  module.rs  object.rs  pattern.rs  program.rs  report.rs  stmt.rs
m_lang/src/semantic/: info.rs  mod.rs  model.rs
m_lang/src/syntax/: binary_like_expression.rs  expression_left_side.rs  file_source.rs  generated.rs  mod.rs  static_value.rs  syntax_node.rs
m_lang/src/syntax/ext/: assign.rs  binding.rs  directive.rs  expr.rs  function.rs  identifier.rs  misc.rs  mod.rs  parameter.rs  stmt.rs  union.rs
m_lang/src/syntax/parentheses/: assignment.rs  expression.rs  mod.rs
m_lang/tests/: formatter.rs  lexer.rs  parser.rs
mlang_formatter/: Cargo.toml
mlang_formatter/src/: comments.rs  context.rs  cst.rs  format.rs  lib.rs  parentheses.rs  prelude.rs  separated.rs  syntax_rewriter.rs
mlang_formatter/src/context/: trailing_commas.rs
mlang_formatter/src/rules/: mod.rs  tokens.rs
mlang_formatter/src/rules/any/: array_element.rs  assignment.rs  binding.rs  call_argument.rs  class_member.rs  constructor_parameter.rs  declaration.rs  declaration_clause.rs  expression.rs  for_in_initializer.rs  for_initializer.rs  formal_parameter.rs  function.rs  function_body.rs  literal_expression.rs  object_member.rs  object_member_name.rs  parameter.rs  root.rs  statement.rs  string_literal.rs  switch_clause.rs
mlang_formatter/src/rules/assignments/: computed_member_assignment.rs  identifier_assignment.rs  parenthesized_assignment.rs  static_member_assignment.rs
mlang_formatter/src/rules/auxiliary/: annotation_attribute.rs  annotation_element.rs  annotation_group.rs  array_hole.rs  case_clause.rs  catch_clause.rs  default_clause.rs  directive.rs  else_clause.rs  expression_snipped.rs  finally_clause.rs  for_iterator_factory.rs  function_body.rs  initializer_clause.rs  module.rs  name.rs  reference_identifier.rs  script.rs  spread.rs  variable_declaration_clause.rs  variable_declarator.rs
mlang_formatter/src/rules/bindings/: annotation_binding.rs  constructor_parameters.rs  extended_binding.rs  formal_parameter.rs  identifier_binding.rs  parameters.rs  rest_parameter.rs
mlang_formatter/src/rules/bogus/: bogus.rs  bogus_assignment.rs  bogus_binding.rs  bogus_expression.rs  bogus_member.rs  bogus_parameter.rs  bogus_statement.rs
mlang_formatter/src/rules/classes/: class_member_name.rs  constructor_class_member.rs  extends_clause.rs  getter_class_member.rs  method_class_member.rs  setter_class_member.rs
mlang_formatter/src/rules/declarations/: catch_declaration.rs  class_declaration.rs  for_variable_declaration.rs  function_declaration.rs  variable_declaration.rs
mlang_formatter/src/rules/expressions/: array_expression.rs  assignment_expression.rs  binary_expression.rs  boolean_literal_expression.rs  call_arguments.rs  call_expression.rs  computed_member_expression.rs  conditional_expression.rs  constant_expression.rs  function_expression.rs  hash_map_expression.rs  hash_set_expression.rs  identifier_expression.rs  in_expression.rs  instanceof_expression.rs  literal_expression.rs  logical_expression.rs  mod.rs  new_expression.rs  object_expression.rs  parenthesized_expression.rs  post_update_expression.rs  pre_update_expression.rs  sequence_expression.rs  static_member_expression.rs  string_expression.rs  (+4 more)
mlang_formatter/src/utils/: array.rs  assignment_like.rs  builders.rs  format_binary_like_expression.rs  format_class.rs  function_body.rs  mod.rs  object.rs  object_like.rs  string_utils.rs
mlang_formatter/tests/: embedded_sql.rs  formatter.rs  helper.rs  new_rules.rs  new_vision.rs  sql_call_names.rs
mlang_lint/: Cargo.toml
mlang_lint/src/: diagnostic.rs  lib.rs
mlang_lint/src/rules/: call_arity_mismatch.rs  else_stray_condition.rs  if_stray_semicolon.rs  mod.rs
mlang_parser/: Cargo.toml
mlang_parser/src/: lib.rs  rewrite.rs  rewrite_parser.rs  single_token_parse_recovery.rs  state.rs  syntax_rules.rs  token_source.rs
mlang_parser/src/lexer/: mod.rs  tests.rs
mlang_parser/src/syntax_rules/: annotation.rs  assignment.rs  binding.rs  class.rs  expr.rs  function.rs  m_parse_error.rs  module.rs  object.rs  program.rs  report.rs  stmt.rs
mlang_parser/tests/: parser.rs
mlang_semantic/: Cargo.toml
mlang_semantic/src/: declaration.rs  info.rs  lib.rs  model.rs  reference.rs
psql_formatter/: Cargo.toml
psql_formatter/src/: comments.rs  context.rs  cst.rs  generated.rs  lib.rs  macros.rs  prelude.rs  separated.rs  utils.rs
psql_formatter/src/psql/: mod.rs
psql_formatter/src/rules/: tokens.rs
psql_formatter/tests/: array_expression.rs  case_expression.rs  cast_expression.rs  delete_statement.rs  insert_statement.rs  join_clause.rs  kitchen_sink.rs  leaves.rs  list_wrapping.rs  logical_chain.rs  normalization.rs  parameter_expression.rs  real_world_snapshot.rs  select_statement.rs  set_operation.rs  subquery_cte.rs  update_statement.rs  window_function.rs
psql_formatter/tests/helper/: mod.rs
(+451 files in other folders)
