[[bin]]
name = "stack-lang-server"

[package]
name = "stack-lang-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
logos =  "0.14.1"
rust-ini = "0.21.0"
thiserror = "1.0.43"
chumsky = { version = "1.0.0-alpha.7", features=["label"] }
biome_parser = "0.5.8"
biome_rowan = { version = "0.5.8", features = ["serde"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
enumflags2 = "0.7.10"
biome_unicode_table = "0.5.9"