[workspace]
resolver = "2"

members = [
   "lsp",
   "line_index",
   "mlang_syntax",
   "mlang_factory",
   "mlang_parser",
   "mlang_semantic",
   "mlang_formatter",
   "mlang_core",
   "mlang_lsp_definition"
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
lsp = { path = 'lsp' }
line_index = { path = 'line_index' }
mlang_syntax = { path = 'mlang_syntax' }
mlang_factory = { path = 'mlang_factory' }
mlang_parser = { path = "mlang_parser" }
mlang_semantic = { path = "mlang_semantic" }
mlang_formatter = { path = "mlang_formatter" }
mlang_core = { path = "mlang_core" }
mlang_lsp_definition = { path = 'mlang_lsp_definition' }

tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde_json = "1.0.149"
serde_yaml = "0.9.33"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "2.1.1"
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
enumflags2 = "0.7.10"
chrono = "0.4.42"
env_logger = "0.11.8"
dashmap = "6.1.0"
unicase = "2.8.1"
walkdir= "2"

log = "0.4.29"
rust-ini = "0.21.3"
thiserror = "2.0.18"

biome_text_size = "0.5.8"
biome_rowan = { version = "=0.5.8", features = ["serde"] }
biome_parser = "0.5.8"
biome_formatter = { git = "https://github.com/Stonum/biome_formatter.git" }
biome_unicode_table = "0.5.9"
biome_diagnostics = "0.5.8"
