[[bin]]
name = "stack-lang-server"

[package]
name = "stack-lang-server"
version = "0.1.0"
edition = "2024"

[dependencies]
line_index = { workspace = true }
mlang_syntax = { workspace = true }
mlang_parser = { workspace = true }
mlang_formatter = { workspace = true }
mlang_semantic = { workspace = true }
mlang_core = { workspace = true }
mlang_lsp_definition = { workspace =  true }

env_logger = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tower-lsp = { workspace = true }
log = { workspace = true }
rust-ini = { workspace = true }
thiserror = { workspace = true }
biome_diagnostics = { workspace = true }
unicase = { workspace = true }
walkdir = { workspace = true }

biome_rowan = { workspace = true }