[package]
name = "m_lang"
version = "0.1.0"
edition = "2021"

[dependencies]
biome_parser = "0.5.8"
biome_rowan = { version = "0.5.8", features = ["serde"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
enumflags2 = "0.7.10"
biome_unicode_table = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"