[package]
name = "m_lang"
version = "0.1.0"
edition = "2024"

[dependencies]
biome_parser = "0.5.8"
biome_rowan = { version = "=0.5.8", features = ["serde"] }
biome_unicode_table = "0.5.9"
biome_formatter = { git = "https://github.com/Stonum/biome_formatter.git" }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
enumflags2 = "0.7.10"
serde = { workspace = true }
serde_json ={ workspace = true }
chrono = "0.4.24"