
[package]
name = "mlang_formatter"
version = "0.0.1"
edition.workspace = true

[dependencies]
mlang_syntax = { workspace = true }
mlang_factory = { workspace = true }
psql_syntax = { workspace = true }
psql_parser = { workspace = true }
psql_formatter = { workspace = true }

serde = { workspace = true }
biome_rowan = { workspace = true }
biome_formatter = { workspace = true }
biome_unicode_table = { workspace = true }

[dev-dependencies]
mlang_parser = { workspace = true }