[package]
name = "mlang_lint"
version = "0.1.0"
edition.workspace = true

[dependencies]
mlang_syntax = { workspace = true }
mlang_semantic = { workspace = true }
mlang_core = { workspace = true }
mlang_lsp_definition = { workspace = true }
biome_rowan = { workspace = true }

[dev-dependencies]
mlang_parser = { workspace = true }
