[package]
name = "psql_formatter"
version = "0.0.1"
edition.workspace = true

[dependencies]
psql_syntax = { workspace = true }
psql_factory = { workspace = true }

serde = { workspace = true }
biome_rowan = { workspace = true }
biome_formatter = { workspace = true }
biome_unicode_table = { workspace = true }

[dev-dependencies]
psql_parser = { workspace = true }
